# ecs

./: .gitignore  CMakeLists.txt  build.cmake  daScript.cmake  ecs-vs.code-workspace  ecs.sln  update-daScript.bat
benchmark/: CMakeLists.txt  benchmark-update.cpp  benchmark-update.cpp.gen  benchmark-update.h  benchmark-update.h.gen  benchmark.cpp  benchmark.das  benchmark.das.aot.cpp  benchmark.vcxproj  benchmark.vcxproj.filters  main.cpp  templates.json  update.ecs.cpp  update.ecs.cpp.gen  update.ecs.h.gen
benchmark/data/: entities.json  templates.json
cef/: ALL_BUILD.vcxproj.filters  cef.sln
cef/libcef_dll_wrapper/: libcef_dll_wrapper.vcxproj
codegen/: CMakeLists.txt  codegen.cpp  codegen.das  codegen.vcxproj  codegen.vcxproj.filters  memory.cpp  parser.cpp  parser.h  queryparser.cpp  queryparser.h  stdafx.cpp  stdafx.h  utils.h
ecs/: CMakeLists.txt  ecs.cpp  ecs.h  ecs.vcxproj  ecs.vcxproj.filters  entities.json  main.cpp  script.lua  stdafx.cpp  stdafx.h  templates.json
ecs/components/: color.component.cpp  color.component.h  color.component.h.gen  color.ecs.h.gen  core.cpp  core.h  default.component.cpp  default.component.h  eid.component.cpp  eid.component.h  position.component.cpp  position.component.h  test.component.cpp  test.component.h  test.component.h.gen  test.ecs.h.gen  timer.component.cpp  timer.component.h  timer.component.h.gen  timer.ecs.h.gen  velocity.component.cpp  velocity.component.h
ecs/ecs/: autoBind.h  component.h  debug.cpp  debug.h  ecs-das.cpp  ecs-das.h  ecs-events.h  ecs-events.h.gen  ecs.cpp  ecs.das  ecs.das.gen  ecs.h  entity.h  event.h  framemem.cpp  framemem.h  hash.h  index.h  jobmanager-v2.cpp  jobmanager.cpp  jobmanager.h  map.cpp  map.h  memory.cpp  perf.h  query.h  snprintf.cpp  stacktrace.cpp  stacktrace.h  stage.h  storage.h  system.h
ecs/io/: json.h
ecs/stages/: dispatchEvent.stage.cpp  dispatchEvent.stage.h  render.stage.cpp  render.stage.h  update.stage.cpp  update.stage.h
ecs/systems/: test.cpp  update.cpp  update.ecs.cpp  update.ecs.cpp.gen  update.ecs.h  update.ecs.h.gen  update.gen.cpp  update.h  window.cpp
git-build/: README.md  build.as  build.cmd  build.cpp  build.filters  build.json  build.vcxproj
libs/EASTL/: CMakeLists.txt
libs/EASTL/Debug/: EASTL.lib
libs/EASTL/Release/: EASTL.lib
libs/EASTL/doc/: EASTL.natvis
libs/LLVM/lib/: libclang.lib
libs/benchmark/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  benchmark.sln
libs/benchmark/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  benchmark.vcxproj  benchmark.vcxproj.filters  benchmark_main.vcxproj  benchmark_main.vcxproj.filters
libs/cef/: ALL_BUILD.vcxproj  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
libs/cef/include/: cef_version.h
libs/cef/libcef_dll_wrapper/: libcef_dll_wrapper.vcxproj  libcef_dll_wrapper.vcxproj.filters
libs/fmt/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  FMT.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  fmt-config-version.cmake  fmt-targets.cmake  fmt.pc  fmt.vcxproj  fmt.vcxproj.filters  run-msbuild.bat
libs/fmt/Debug/: fmtd.lib
libs/fmt/Release/: fmt.lib
libs/fmt/doc/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
libs/fmt/test/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  assert-test.vcxproj  assert-test.vcxproj.filters  chrono-test.vcxproj  chrono-test.vcxproj.filters  cmake_install.cmake  core-test.vcxproj  core-test.vcxproj.filters  custom-formatter-test.vcxproj  custom-formatter-test.vcxproj.filters  format-impl-test.vcxproj  format-impl-test.vcxproj.filters  format-test.vcxproj  format-test.vcxproj.filters  gmock.vcxproj  (+21 more)
libs/imgui/: CMakeLists.txt
libs/mongoose/: bson.cpp  bson.h  bsonUtils.h  mongoose.c
lua/lua/: lua.vcxproj  lua.vcxproj.filters
mongoose/mongoose/: mongoose.vcxproj
sample/: CMakeLists.txt  _native.json  boids.cpp  boids.cpp.gen  boids.h  boids.h.gen  build.cmd  cef.cpp  cef.cpp.gen  cef.h  cef.h.gen  codegen-test.cpp  codegen-test.cpp.gen  dump.lua  editor.cmd  entities.json  entities_boids.json  grid.cpp  grid.cpp.gen  grid.h  level_1.as  level_1.json  level_generator.as  main.cpp  physics.cpp  physics.cpp.gen  physics.ecs.cpp  physics.ecs.cpp.gen  sample-config.h.in  sample.cpp  sample.natvis  sample.vcxproj  sample.vcxproj.filters  script-update.cpp  script-update.cpp.gen  script-update.h  script-update.h.gen  script.as  script.ecs.cpp  script.ecs.cpp.gen  (+20 more)
sample/data/: entities.json  entities_boids.json  level_1.json  templates.json
sample/scripts/: common.das_project  ecs_system_macro.das  level_generator.as  main.das  project.das_project  sample.das  script.as  templates.das
script/: script-ecs.cpp  script-ecs.h  script-query.cpp  script-query.h  script.cpp  script.h  script.vcxproj  script.vcxproj.filters  scriptECS.cpp  scriptECS.h  scriptQuery.cpp  scriptQuery.h
tests/: CMakeLists.txt  gTest.cmake  jobmanager-unittest.cpp  query-unittest.cpp  template-unittest.cpp  templates.json  tests.cpp  tests.vcxproj
tests/data/: templates.json
vs-angelscript/: .gitignore  README.md  package-lock.json  package.json
vs-angelscript-debugger/: package-lock.json  package.json
vs-angelscript-debugger/src/: debugAdapter.ts  debugRuntime.ts  extension.ts
vs-angelscript/client/: package-lock.json  package.json
vs-angelscript/server/: block.grammar.pegjs  function.grammar.pegjs  package-lock.json  package.json
webui/: .angular.json  build.bat  install.bat  package-lock.json  package.json  tsconfig.json
webui/app/: app.component.css  app.component.html  app.component.ts  app.module.ts  app.service.ts  index.html  leveleditor.component.html  leveleditor.component.ts  main.ts  polyfills.ts
(+36 files in other folders)
